# grpc-gateway

./: WORKSPACE  repositories.bzl
examples/examplepb/: BUILD.bazel
examples/sub/: BUILD.bazel
examples/sub2/: BUILD.bazel
options/: BUILD.bazel
protoc-gen-grpc-gateway/: BUILD.bazel
protoc-gen-swagger/genswagger/: BUILD.bazel
protoc-gen-swagger/options/: BUILD.bazel
runtime/: BUILD.bazel  handler.go  handler_test.go  marshal_jsonpb.go  query.go  query_test.go
runtime/internal/: BUILD.bazel
runtime/internal/examplepb/: BUILD.bazel  example.proto  proto2.proto  proto3.proto
utilities/: BUILD.bazel
