load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "examplepb_proto",
    srcs = [
        "example.proto",
        "proto2.proto",
        "proto3.proto",
    ],
    visibility = ["//runtime:__subpackages__"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "examplepb_go_proto",
    importpath = "github.com/grpc-ecosystem/grpc-gateway/runtime/internal/examplepb",
    proto = ":examplepb_proto",
    visibility = ["//runtime:__subpackages__"],
)

go_library(
    name = "go_default_library",
    embed = [":examplepb_go_proto"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/runtime/internal/examplepb",
    visibility = ["//runtime:__subpackages__"],
)
